--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,7 +4,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/my_dark_primary</item>
         <item name="colorPrimaryDark">@color/my_dark_primary_dark</item>
-        <item name="colorAccent">@color/my_light_primary</item>
+        <item name="colorAccent">@color/color_accent</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:textColor">@color/white</item>
 
