--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="my_light_primary_dark">#4A74E1</color>
-    <color name="my_light_primary">#638EFF</color>
+    <color name="my_light_primary_dark">#000000</color>
+    <color name="my_light_primary">#000000</color>
     <color name="my_dark_primary">#1C1B1B</color>
     <color name="my_dark_primary_dark">#F5151515</color>
     <color name="greyColor">#e5e5e5</color>
-    <color name="buttoncolor">#3D63C6</color>
+    <color name="color_accent">#F68D37</color>
+    <color name="buttoncolor">#F68D37</color>
     <color name="errorcolor">#FF4D4D</color>
 </resources>
