--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -7,7 +7,7 @@
         <item name="colorAccent">@color/color_accent</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:textColor">@color/white</item>
-
+        <item name="android:actionMenuTextColor">@color/white</item>
     </style>
 
     <style name="ThemeOverlay.AppTheme.TextInputEditText.Outlined" parent="">
