--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,11 +2,12 @@
 
     <style name="Base.Theme.MyApplication" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/my_light_primary</item>
-        <item name="colorPrimaryDark">@color/my_light_primary_dark</item>
+        <item name="colorPrimary">@color/color_accent</item>
+        <item name="colorPrimaryDark">@color/color_accent</item>
         <item name="colorAccent">@color/color_accent</item>
         <item name="android:windowBackground">@android:color/white</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
 
     </style>
 
