--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,8 +4,92 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ui.home.HomeFragment">
+    tools:context=".ui.fragments.HomeFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <TextView
+            android:id="@+id/txtSearchLocation"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:text="@string/app_name"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:background="@drawable/layout_bg"
+            android:drawablePadding="10dp"
+            app:drawableStartCompat="@drawable/action_search"
+            app:drawableTint="@color/black" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            android:gravity="center_vertical"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/txtCheckIn"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center_vertical"
+                android:text="@string/app_name"
+                android:padding="10dp"
+                android:background="@drawable/layout_bg"
+                android:drawablePadding="10dp"
+                app:drawableStartCompat="@drawable/action_calendar_check"
+                app:drawableTint="@color/black"
+                android:layout_weight="1"
+                android:layout_marginEnd="5dp"
+               />
+
+            <TextView
+                android:id="@+id/txtCheckOut"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:gravity="center_vertical"
+                android:text="@string/app_name"
+                android:padding="10dp"
+                android:background="@drawable/layout_bg"
+                android:drawablePadding="10dp"
+                app:drawableStartCompat="@drawable/action_calendar_check"
+                app:drawableTint="@color/black"
+                android:layout_weight="1"
+                android:layout_marginStart="5dp"
+               />
+        </LinearLayout>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:text="@string/_1_room_2_adults_amp_0_children"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:background="@drawable/layout_bg"
+            android:drawablePadding="10dp"
+            app:drawableStartCompat="@drawable/action_user"
+            app:drawableTint="@color/black"
+            android:layout_marginTop="10dp"/>
+
+        <Button
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="@string/search"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:backgroundTint="@color/color_accent"/>
+
+    </LinearLayout>
 
     <include
         android:id="@+id/progress_bar"
