--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="my_dark_primary">#1C1B1B</color>
     <color name="my_dark_primary_dark">#F5151515</color>
     <color name="greyColor">#e5e5e5</color>
+    <color name="liteGreyColor">#C1BFBF</color>
     <color name="color_accent">#F68D37</color>
     <color name="buttoncolor">#F68D37</color>
     <color name="errorcolor">#FF4D4D</color>
