--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="5dp"
+    android:layout_margin="1dp"
     app:cardCornerRadius="5dp"
-    app:cardElevation="5dp"
-    android:id="@+id/cardView">
+    app:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,22 +16,24 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:padding="15dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:contentDescription="@string/app_name"
+            android:padding="10dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/airplane" />
 
         <TextView
             android:id="@+id/txtTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:padding="5dp"
             android:text="@string/app_name"
             android:textAlignment="center"
-           android:textStyle="bold"
-            android:layout_marginBottom="10dp"
-            android:padding="5dp"/>
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
