--- a/app/src/main/res/layout/menu_list_item.xml
+++ b/app/src/main/res/layout/menu_list_item.xml
@@ -15,10 +15,11 @@
         android:foreground="?selectableItemBackground"
         android:gravity="start|center"
         android:textAllCaps="false"
+        android:text="@string/logout"
         android:textColor="@color/black"
         android:fontFamily="@font/roboto"
         app:drawableRightCompat="@drawable/action_arrow_forward"
-        app:drawableTint="@color/liteGreyColor"
+        app:drawableTint="@color/black"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         />
