--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_spinner"
-        android:title="@string/spinner"
-        app:actionViewClass="androidx.appcompat.widget.AppCompatSpinner"
+        android:id="@+id/action_user"
+        android:title="@string/user"
+        android:icon="@drawable/account_circle_24"
         app:showAsAction="always"
-        />
+       />
 
 </menu>
