hotel list screen

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.HomeFragment"
-    android:background="#5BE5E5E5">
+    android:background="@color/layout_bg">
 
     <RelativeLayout
         android:layout_width="match_parent"
