--- a/app/src/main/res/layout/activity_hotel_list.xml
+++ b/app/src/main/res/layout/activity_hotel_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.HotelListActivity">
+    tools:context=".ui.HotelListActivity"
+    android:background="@color/layout_bg">
 
 
     <androidx.recyclerview.widget.RecyclerView
